--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: post
+title: Walter M
+---
 <html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
